force-app/main/default/objects/gaid__GiftAid_Settings__c/gaid__GiftAid_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gift Aid Settings</label>
</CustomObject>