force-app/main/default/objects/gaid__GiftAid_Settings__c/fields/gaid__Advanced_GiftAid_Eligibility_Calculation__c.field-meta.xml
<CustomField>
    <fullName>gaid__Advanced_GiftAid_Eligibility_Calculation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>specify if the new &quot;Gift Aid Declaration&quot; on Installment lookup field should be used or the old &quot;gaid__Contact_has_Active_GAD__c&quot; check</description>
    <inlineHelpText>Base Gift Aid Eligibility On Installment GAD Lookup</inlineHelpText>
    <label>Advanced GiftAid Eligibility Calculation</label>
    <type>Checkbox</type>
</CustomField>