force-app/main/default/objects/gaid__GiftAid_Settings__c/fields/gaid__Cooling_Off_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>gaid__Cooling_Off_Period_Days__c</fullName>
    <description>Period required by HMRC before an oral declaration can be used to claim Gift Aid.</description>
    <inlineHelpText>Period required by HMRC before an oral declaration can be used to claim Gift Aid.</inlineHelpText>
    <label>Number of cooling off days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>