force-app/main/default/objects/gaid__GiftAid_Settings__c/fields/gaid__Max_Installments_per_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>gaid__Max_Installments_per_Payment_Schedule__c</fullName>
    <defaultValue>250000</defaultValue>
    <description>Maximum number of Gift Aid claims in a single submission to HMRC. FinDock recommends staying well below 350,000.</description>
    <inlineHelpText>Maximum number of Gift Aid claims in a single submission to HMRC. FinDock recommends staying well below 350,000.</inlineHelpText>
    <label>Max installments per payment schedule</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>